k8-manifests/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: wanderlust
  labels:
    app: wanderlust-app
    environment: production
