k8-manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wanderlust-service
  namespace: wanderlust
spec:
  ports:
    - port: 5000
      targetPort: 5000
      protocol: TCP
  # This is the NodePort service, as we using aws ingress controller, we need to expose the service on a NodePort
  type: NodePort
  selector:
    app: wanderlust-app
