k8-manifests/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: wanderlust-ingress
  namespace: wanderlust

  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/healthcheck-path: /health
spec:
  ingressClassName: alb
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: wanderlust-service
            port:
              number: 5000
